@@ -18,7 +18,7 @@
  */
 package org.apache.pinot.query.runtime.executor;
 
-import com.google.common.collect.ImmutableList;
+import java.util.List;
 import java.util.Map;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
@@ -36,6 +36,7 @@ import org.apache.pinot.query.runtime.plan.MultiStageQueryStats;
 import org.apache.pinot.query.runtime.plan.OpChainExecutionContext;
 import org.apache.pinot.spi.exception.QueryCancelledException;
 import org.apache.pinot.spi.executor.ExecutorServiceUtils;
+import org.apache.pinot.spi.query.QueryThreadContext;
 import org.mockito.Mockito;
 import org.mockito.MockitoAnnotations;
 import org.testng.annotations.AfterClass;
@@ -51,16 +52,15 @@ import static org.testng.Assert.fail;
 
 
 public class OpChainSchedulerServiceTest {
-
-  private ExecutorService _executor;
   private AutoCloseable _mocks;
-
+  private ExecutorService _executor;
   private MultiStageOperator _operatorA;
 
   @BeforeClass
   public void beforeClass() {
     _mocks = MockitoAnnotations.openMocks(this);
-    _executor = Executors.newCachedThreadPool(new NamedThreadFactory("worker_on_" + getClass().getSimpleName()));
+    _executor = QueryThreadContext.contextAwareExecutorService(
+        Executors.newCachedThreadPool(new NamedThreadFactory("worker_on_" + getClass().getSimpleName())));
   }
 
   @AfterClass
@@ -81,25 +81,24 @@ public class OpChainSchedulerServiceTest {
     when(mailboxService.getHostname()).thenReturn("localhost");
     when(mailboxService.getPort()).thenReturn(1234);
     WorkerMetadata workerMetadata = new WorkerMetadata(0, Map.of(), Map.of());
-    OpChainExecutionContext context =
-        new OpChainExecutionContext(mailboxService, 123L, Long.MAX_VALUE, Long.MAX_VALUE, Map.of(),
-            new StageMetadata(0, ImmutableList.of(workerMetadata), Map.of()), workerMetadata, null, null, true);
+    OpChainExecutionContext context = OpChainExecutionContext.fromQueryContext(mailboxService, Map.of(),
+        new StageMetadata(0, List.of(workerMetadata), Map.of()), workerMetadata, null, true);
     return new OpChain(context, operator);
   }
 
   @Test
   public void shouldScheduleSingleOpChainRegisteredAfterStart()
       throws InterruptedException {
-    OpChain opChain = getChain(_operatorA);
-    OpChainSchedulerService schedulerService = new OpChainSchedulerService(_executor);
-
     CountDownLatch latch = new CountDownLatch(1);
     Mockito.when(_operatorA.nextBlock()).thenAnswer(inv -> {
       latch.countDown();
       return SuccessMseBlock.INSTANCE;
     });
 
-    schedulerService.register(opChain);
+    OpChainSchedulerService schedulerService = new OpChainSchedulerService(_executor);
+    try (QueryThreadContext ignore = QueryThreadContext.openForMseTest()) {
+      schedulerService.register(getChain(_operatorA));
+    }
 
     assertTrue(latch.await(10, TimeUnit.SECONDS), "expected await to be called in less than 10 seconds");
   }
@@ -107,16 +106,16 @@ public class OpChainSchedulerServiceTest {
   @Test
   public void shouldScheduleSingleOpChainRegisteredBeforeStart()
       throws InterruptedException {
-    OpChain opChain = getChain(_operatorA);
-    OpChainSchedulerService schedulerService = new OpChainSchedulerService(_executor);
-
     CountDownLatch latch = new CountDownLatch(1);
     Mockito.when(_operatorA.nextBlock()).thenAnswer(inv -> {
       latch.countDown();
       return SuccessMseBlock.INSTANCE;
     });
 
-    schedulerService.register(opChain);
+    OpChainSchedulerService schedulerService = new OpChainSchedulerService(_executor);
+    try (QueryThreadContext ignore = QueryThreadContext.openForMseTest()) {
+      schedulerService.register(getChain(_operatorA));
+    }
 
     assertTrue(latch.await(10, TimeUnit.SECONDS), "expected await to be called in less than 10 seconds");
   }
@@ -124,9 +123,6 @@ public class OpChainSchedulerServiceTest {
   @Test
   public void shouldCallCloseOnOperatorsThatFinishSuccessfully()
       throws InterruptedException {
-    OpChain opChain = getChain(_operatorA);
-    OpChainSchedulerService schedulerService = new OpChainSchedulerService(_executor);
-
     CountDownLatch latch = new CountDownLatch(1);
     Mockito.when(_operatorA.nextBlock()).thenReturn(SuccessMseBlock.INSTANCE);
     Mockito.doAnswer(inv -> {
@@ -134,7 +130,10 @@ public class OpChainSchedulerServiceTest {
       return null;
     }).when(_operatorA).close();
 
-    schedulerService.register(opChain);
+    OpChainSchedulerService schedulerService = new OpChainSchedulerService(_executor);
+    try (QueryThreadContext ignore = QueryThreadContext.openForMseTest()) {
+      schedulerService.register(getChain(_operatorA));
+    }
 
     assertTrue(latch.await(10, TimeUnit.SECONDS), "expected await to be called in less than 10 seconds");
   }
@@ -142,9 +141,6 @@ public class OpChainSchedulerServiceTest {
   @Test
   public void shouldCallCancelOnOperatorsThatReturnErrorBlock()
       throws InterruptedException {
-    OpChain opChain = getChain(_operatorA);
-    OpChainSchedulerService schedulerService = new OpChainSchedulerService(_executor);
-
     CountDownLatch latch = new CountDownLatch(1);
     Mockito.when(_operatorA.nextBlock()).thenReturn(ErrorMseBlock.fromException(new RuntimeException("foo")));
     Mockito.doAnswer(inv -> {
@@ -152,7 +148,10 @@ public class OpChainSchedulerServiceTest {
       return null;
     }).when(_operatorA).cancel(Mockito.any());
 
-    schedulerService.register(opChain);
+    OpChainSchedulerService schedulerService = new OpChainSchedulerService(_executor);
+    try (QueryThreadContext ignore = QueryThreadContext.openForMseTest()) {
+      schedulerService.register(getChain(_operatorA));
+    }
 
     assertTrue(latch.await(10, TimeUnit.SECONDS), "expected await to be called in less than 10 seconds");
   }
@@ -160,9 +159,6 @@ public class OpChainSchedulerServiceTest {
   @Test
   public void shouldCallCancelOnOpChainsWhenItIsCancelledByDispatch()
       throws InterruptedException {
-    OpChain opChain = getChain(_operatorA);
-    OpChainSchedulerService schedulerService = new OpChainSchedulerService(_executor);
-
     CountDownLatch opChainStarted = new CountDownLatch(1);
     Mockito.doAnswer(inv -> {
       opChainStarted.countDown();
@@ -178,7 +174,10 @@ public class OpChainSchedulerServiceTest {
     }).when(_operatorA).cancel(Mockito.any());
     Mockito.doAnswer(inv -> MultiStageQueryStats.emptyStats(1)).when(_operatorA).calculateStats();
 
-    schedulerService.register(opChain);
+    OpChainSchedulerService schedulerService = new OpChainSchedulerService(_executor);
+    try (QueryThreadContext ignore = QueryThreadContext.openForMseTest()) {
+      schedulerService.register(getChain(_operatorA));
+    }
 
     assertTrue(opChainStarted.await(10, TimeUnit.SECONDS), "op chain doesn't seem to be started");
 
@@ -192,9 +191,6 @@ public class OpChainSchedulerServiceTest {
   @Test
   public void shouldCallCancelOnOpChainsThatThrow()
       throws InterruptedException {
-    OpChain opChain = getChain(_operatorA);
-    OpChainSchedulerService schedulerService = new OpChainSchedulerService(_executor);
-
     CountDownLatch cancelLatch = new CountDownLatch(1);
     Mockito.when(_operatorA.nextBlock()).thenThrow(new RuntimeException("foo"));
     Mockito.doAnswer(inv -> {
@@ -202,7 +198,10 @@ public class OpChainSchedulerServiceTest {
       return null;
     }).when(_operatorA).cancel(Mockito.any());
 
-    schedulerService.register(opChain);
+    OpChainSchedulerService schedulerService = new OpChainSchedulerService(_executor);
+    try (QueryThreadContext ignore = QueryThreadContext.openForMseTest()) {
+      schedulerService.register(getChain(_operatorA));
+    }
 
     assertTrue(cancelLatch.await(10, TimeUnit.SECONDS), "expected OpChain to be cancelled");
     Mockito.verify(_operatorA, Mockito.times(1)).cancel(Mockito.any());
@@ -210,29 +209,31 @@ public class OpChainSchedulerServiceTest {
 
   @Test
   public void shouldThrowQueryCancelledExceptionWhenRegisteringOpChainAfterQueryCancellation() {
-    OpChain opChain = getChain(_operatorA);
+    Mockito.when(_operatorA.nextBlock()).thenReturn(SuccessMseBlock.INSTANCE);
+    Mockito.doAnswer(inv -> MultiStageQueryStats.emptyStats(1)).when(_operatorA).calculateStats();
+
     OpChainSchedulerService schedulerService = new OpChainSchedulerService(_executor);
+    try (QueryThreadContext ignore = QueryThreadContext.openForMseTest()) {
+      schedulerService.register(getChain(_operatorA));
 
-    // First cancel the query with the same requestId (123L as defined in getChain method)
-    schedulerService.cancel(123L);
+      // First cancel the query with the same requestId (123L as defined in getChain method)
+      schedulerService.cancel(123L);
 
-    // Now try to register an OpChain for the same query - should throw QueryCancelledException
-    try {
-      schedulerService.register(opChain);
-      fail("Expected QueryCancelledException to be thrown when registering OpChain after query cancellation");
-    } catch (QueryCancelledException e) {
-      assertTrue(e.getMessage().contains("Query has been cancelled before op-chain"));
-      assertTrue(e.getMessage().contains("being scheduled"));
+      // Now try to register an OpChain for the same query - should throw QueryCancelledException
+      try {
+        schedulerService.register(getChain(_operatorA));
+        fail("Expected QueryCancelledException to be thrown when registering OpChain after query cancellation");
+      } catch (QueryCancelledException e) {
+        String message = e.getMessage();
+        assertTrue(message.contains("Query has been cancelled before op-chain"));
+        assertTrue(message.contains("being scheduled"));
+      }
     }
   }
 
   @Test
   public void shouldHandleConcurrentCancellationAndRegistration()
       throws InterruptedException {
-    OpChain opChain = getChain(_operatorA);
-    OpChainSchedulerService schedulerService = new OpChainSchedulerService(_executor);
-
-    // Setup mock to slow down the execution so we can test concurrent cancellation
     CountDownLatch registrationStarted = new CountDownLatch(1);
     CountDownLatch cancellationCanProceed = new CountDownLatch(1);
     Mockito.when(_operatorA.nextBlock()).thenAnswer(inv -> {
@@ -242,44 +243,45 @@ public class OpChainSchedulerServiceTest {
     });
     Mockito.doAnswer(inv -> MultiStageQueryStats.emptyStats(1)).when(_operatorA).calculateStats();
 
-    // Start registration in a separate thread
-    CountDownLatch registrationCompleted = new CountDownLatch(1);
-    boolean[] registrationSucceeded = {false};
-    Thread registrationThread = new Thread(() -> {
+    OpChainSchedulerService schedulerService = new OpChainSchedulerService(_executor);
+    try (QueryThreadContext ignore = QueryThreadContext.openForMseTest()) {
+      // Start registration in a separate thread
+      CountDownLatch registrationCompleted = new CountDownLatch(1);
+      boolean[] registrationSucceeded = {false};
+      _executor.submit(() -> {
+        try {
+          schedulerService.register(getChain(_operatorA));
+          registrationSucceeded[0] = true;
+        } catch (QueryCancelledException e) {
+          // Expected if cancellation happens before registration
+          registrationSucceeded[0] = false;
+        } finally {
+          registrationCompleted.countDown();
+        }
+      });
+
+      // Wait for registration to start
+      assertTrue(registrationStarted.await(10, TimeUnit.SECONDS), "Registration should have started");
+
+      // Now cancel the query while it's running
+      schedulerService.cancel(123L);
+
+      // Allow the opchain execution to complete
+      cancellationCanProceed.countDown();
+
+      // Wait for registration thread to complete
+      assertTrue(registrationCompleted.await(10, TimeUnit.SECONDS), "Registration thread should complete");
+
+      // The registration should have succeeded since it started before cancellation
+      assertTrue(registrationSucceeded[0], "Registration should have succeeded");
+
+      // Now try to register another OpChain with the same requestId - should fail
       try {
-        schedulerService.register(opChain);
-        registrationSucceeded[0] = true;
+        schedulerService.register(getChain(_operatorA));
+        fail("Expected QueryCancelledException for subsequent registration after cancellation");
       } catch (QueryCancelledException e) {
-        // Expected if cancellation happens before registration
-        registrationSucceeded[0] = false;
-      } finally {
-        registrationCompleted.countDown();
+        assertTrue(e.getMessage().contains("Query has been cancelled before op-chain"));
       }
-    });
-
-    registrationThread.start();
-
-    // Wait for registration to start
-    assertTrue(registrationStarted.await(10, TimeUnit.SECONDS), "Registration should have started");
-
-    // Now cancel the query while it's running
-    schedulerService.cancel(123L);
-
-    // Allow the opchain execution to complete
-    cancellationCanProceed.countDown();
-
-    // Wait for registration thread to complete
-    assertTrue(registrationCompleted.await(10, TimeUnit.SECONDS), "Registration thread should complete");
-
-    // The registration should have succeeded since it started before cancellation
-    assertTrue(registrationSucceeded[0], "Registration should have succeeded");
-
-    // Now try to register another OpChain with the same requestId - should fail
-    try {
-      schedulerService.register(getChain(_operatorA));
-      fail("Expected QueryCancelledException for subsequent registration after cancellation");
-    } catch (QueryCancelledException e) {
-      assertTrue(e.getMessage().contains("Query has been cancelled before op-chain"));
     }
   }
 }
